--- a/src/app.html
+++ b/src/app.html
@@ -5,11 +5,15 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 
+		<link rel="stylesheet" href="%sveltekit.assets%/mdi/css/materialdesignicons.min.css">
 		<link rel="stylesheet" href="%sveltekit.assets%/fluent/FluentSystemIcons-Resizable.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/sal-master/dist/sal.css">
 
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script src="%sveltekit.assets%/sal-master/dist/sal.js"></script>
+		<script src="%sveltekit.assets%/scripts/app.js"></script>
 	</body>
 </html>
