--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents" class="bg-base text-gray-50 h-full w-full">%sveltekit.body%</div>
 		<script src="%sveltekit.assets%/sal-master/dist/sal.js"></script>
 		<script src="%sveltekit.assets%/scripts/app.js"></script>
 	</body>
