--- a/src/app.html
+++ b/src/app.html
@@ -8,11 +8,13 @@
 		<link rel="stylesheet" href="%sveltekit.assets%/mdi/css/materialdesignicons.min.css">
 		<link rel="stylesheet" href="%sveltekit.assets%/fluent/FluentSystemIcons-Resizable.css">
 		<link rel="stylesheet" href="%sveltekit.assets%/sal-master/dist/sal.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/exfo/exfo.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/styles/room.css">
 
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents" class="bg-base text-gray-50 h-full w-full">%sveltekit.body%</div>
+		<div style="display: contents" class="">%sveltekit.body%</div>
 		<script src="%sveltekit.assets%/sal-master/dist/sal.js"></script>
 		<script src="%sveltekit.assets%/scripts/app.js"></script>
 	</body>
