--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents" class="">%sveltekit.body%</div>
-		<script src="%sveltekit.assets%/sal-master/dist/sal.js"></script>
+		<script src="%sveltekit.assets%/extlib/sal-master/dist/sal.js"></script>
 		<script src="%sveltekit.assets%/scripts/app.js"></script>
 	</body>
 </html>
